fixing horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-color: rgb(254, 239, 225);
+
+  overflow-x: hidden;
 }
 
 code {
